--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,5 +18,10 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+  background-color: #880808;
 }
 
+#smiles  {
+object-position: 40%;
+
+}
