--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,6 +18,14 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+  color:#ffffff;
   background-color: #880808;
 }
 
+.miltonian-tattoo-regular , .title {
+  font-family: "Miltonian Tattoo", serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 100px;
+  color:#ffffff;
+}
