--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,3 +29,16 @@ body {
   font-size: 100px;
   color:#ffffff;
 }
+
+.animatedText {
+  position:absolute;
+  font-family: "Miltonian Tattoo", serif;
+  font-size: 160px; /*130px*/
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  top: 60%;
+  transform: translateY(-50%);
+  color:#F2F2F2;
+}
