--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,21 +26,22 @@ body {
   font-family: "Miltonian Tattoo", serif;
   font-weight: 400;
   font-style: normal;
-  font-size: 100px;
+  font-size: 6.25rem;
   color:#ffffff;
 }
 
 .animatedText {
   position:absolute;
   font-family: "Miltonian Tattoo", serif;
-  font-size: 160px; /*130px*/
+  font-size: clamp(2rem, 10vw, 8rem);/*font-size: 160px; 130px*/
   text-align: center;
   display: flex;
   justify-content: center;
   width: 100%;
+  max-width: 90%;
   top: 60%;
   transform: translateY(-50%);
-  
+  padding: 0 1rem;
 }
 
 .modal {
@@ -59,12 +60,12 @@ body {
   font-size:large;
 }
 
+
 .overlayTitle {
- position:absolute;
- bottom: 40%;
  font-family: "Miltonian Tattoo", serif;
  text-align: center;
-font-size: 160px;
+ font-size: clamp(2rem, 10vw, 8rem);
+
 }
 
 .overlayText {
