--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -37,8 +37,8 @@ body {
   text-align: center;
   display: flex;
   justify-content: center;
-  width: 100%;
-  max-width: 90%;
+  min-width: 100%;
+ 
   top: 60%;
   transform: translateY(-50%);
   padding: 0 1rem;
