--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,6 +20,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   color:#ffffff;
   background-color: #880808;
+  height: 100%
 }
 
 .miltonian-tattoo-regular , .title {
