--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,7 +20,63 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   color:#ffffff;
   background-color: #880808;
- min-height: 100vh;
+ 
+}
+
+@media(max-width: 100vw) {
+.home {
+  .miltonian-tattoo-regular , .title {
+    font-family: "Miltonian Tattoo", serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 6.25rem;
+    color:#ffffff;
+  }
+  
+  .animatedText {
+    position:absolute;
+    font-family: "Miltonian Tattoo", serif;
+    font-size: clamp(2rem, 10vw, 8rem);/*font-size: 160px; 130px*/
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    min-width: 100%;
+   
+    top: 60%;
+    transform: translateY(-50%);
+    padding: 0 1rem;
+  }
+  
+  .modal {
+    position:absolute;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    transform: translateY(-50%);
+    top: 80%;
+    font-size: 26px;
+  }
+  
+  .location {
+    bottom: 16%;
+    font-size:large;
+  }
+  
+  
+  .overlayTitle {
+   font-family: "Miltonian Tattoo", serif;
+   text-align: center;
+   font-size: clamp(2rem, 10vw, 8rem);
+  
+  }
+  
+  .overlayText {
+    position:absolute;
+    top: 60%;
+    font-size:large;
+  }
+ }
 }
 
 .miltonian-tattoo-regular , .title {
