--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,7 +20,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   color:#ffffff;
   background-color: #880808;
- 
+ width: 100%;
 }
 
 .miltonian-tattoo-regular , .title {
