--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,14 @@
   }
 }
 
+@media(max-width: 640px) {
+  .main-picture {
+    width: 100vw;
+    height: 100vh;
+    margin:0;
+  }
+}
+
 
 body {
   color: var(--foreground);
