--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,14 +14,12 @@
   }
 }
 
-@media(max-width: 640px) {
-  .main-picture {
-    width: 100vw;
-    height: 100vh;
-    margin:0;
+@media(max-width: 600px) {
+  body {
+width:100%;
+height: 100%;
   }
 }
-
 
 body {
   color: var(--foreground);
