--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,12 +14,6 @@
   }
 }
 
-@media(max-width: 600px) {
-  body {
-width:100%;
-height: 100%;
-  }
-}
 
 body {
   color: var(--foreground);
@@ -27,6 +21,12 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   color:#ffffff;
   background-color: #880808;
+}
+
+body {
+  width: fit-content;
+  height: 100%;
+ margin: 0;
 }
 
 .miltonian-tattoo-regular , .title {
