--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,9 +24,13 @@ body {
 }
 
 body {
-  width: fit-content;
+  width: 100%;
   height: 100%;
- margin: 0;
+  display:flex;
+  align-items: center;
+  margin:0;
+  justify-content: flex-start;
+  flex-direction: column;
 }
 
 .miltonian-tattoo-regular , .title {
