--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,8 +28,8 @@ body {
   height: 100%;
   display:flex;
   align-items: center;
-  margin:0;
   flex-direction: column;
+  justify-content: flex-start;
 }
 
 .miltonian-tattoo-regular , .title {
