--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,7 +30,7 @@ body {
   align-items: center;
   flex-direction: column;
   justify-content: flex-start;
-  overflow-x: hidden;
+  margin:0;
 }
 
 .miltonian-tattoo-regular , .title {
