--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,7 +13,10 @@
     --foreground: #ededed;
   }
 }
+body {
+  width: 100%;
 
+}
 body {
   color: var(--foreground);
   background: var(--background);
@@ -22,21 +25,15 @@ body {
   background-color: #880808;
 }
 
-body {
-  width: 100%;
-  height: 100%;
-  display:flex;
-  align-items: center;
-  flex-direction: column;
-  justify-content: flex-start;
-  margin:0;
-}
+
+
+
 
 @media only screen and (max-width: 768px) and (orientation:landscape) {
   body {
     width:100%;
-    align-items:center;
-    justify-content: center;
+    height:auto;
+    
   }
 
  
@@ -46,16 +43,13 @@ body {
   /* For mobile phones:*/
   body {
    width: 100%;   
-   align-items:center;
-   justify-content: center;
-  }
+   height: auto;
  
+  }
+
+
 }
 
-.main-picture , .secondaryPicture {
-  max-width: 100%;
-  height: 0 auto;
-  }
 
 
 .miltonian-tattoo-regular , .title {
