--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,9 +13,19 @@
     --foreground: #ededed;
   }
 }
+
+
+html {
+  height: 100%;
+  overflow-x: hidden; 
+}
+
 body {
   width: 100%;
-
+  min-height: 100vh;
+  margin: 0;
+  overflow-x: hidden; 
+  overflow-y: auto;  
 }
 body {
   color: var(--foreground);
