--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -43,7 +43,6 @@ body {
   body {
     width:100%;
     height:auto;
-    
   }
 
  
@@ -56,8 +55,6 @@ body {
    height: auto;
  
   }
-
-
 }
 
 
@@ -66,8 +63,10 @@ body {
   font-family: "Miltonian Tattoo", serif;
   font-weight: 400;
   font-style: normal;
-  font-size: 6.25rem;
+font-size: 5rem;
+/*margin-bottom: 30px;*/
   color:#ffffff;
+  display:inline-block;
 }
 
 .animatedText {
