only the title is left to be responsive

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -44,7 +44,7 @@ body {
     width:100%;
     height:auto;
   }
-
+  
  
 }
 
@@ -55,8 +55,12 @@ body {
    height: auto;
  
   }
+.finalContent {
+  width: 100vw;
+  height:auto;
 }
 
+}
 
 
 .miltonian-tattoo-regular , .title {
